assets/css/index.css
/* ... */
a,
a:focus,
a:active,
a:visited {
  color: inherit;
  text-decoration: none;
}

ol {
  padding-left: 18px;
}

ul {
  list-style: none;
  padding-left: 0;
}

button,
.button {
  outline: none;
  -webkit-box-shadow: none;
          box-shadow: none;
  border: none;
  display: inline-block;
  width: 265px;
  max-width: 100%;
  font-size: 12px;
  text-transform: uppercase;
  text-align: center;
  letter-spacing: 7.5px;
  color: #898787;
  background-color: white;
  border-radius: 28px;
  padding: 16px;
  cursor: pointer;
  -webkit-box-sizing: content-box;
          box-sizing: content-box;
}

.bg__red {
  background-color: #c12333;
}

.bg__yellow {
  background-color: #f4b023;
}

.bg__blue {
  background-color: #105faa;
}

body footer {
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
}

body footer > i,
body footer > nav {
  display: inline-block;
}

body footer > nav:first-of-type > a {
  text-transform: uppercase;
  margin: 0 8px;
  display: inline-block;
  font-size: 12px;
}

.p__group {
  display: block;
  margin: 0 0 2em;
}

.p__group > :first-child {
  margin-top: 0;
}

.p__group > :last-child {
  margin-bottom: 0;
} 

/* 
  3.  Typography
  ===================
*/

h1, h2 {
  font-family: "Roboto", Helvetica, sans-serif;
  font-size: 7vw;
  color: inherit;
}

h3 {
  font-family: "Roboto", Helvetica, sans-serif;
  font-size: 48px;
  letter-spacing: 0;
  color: inherit;
}

h4 {
  font-family: "Roboto", Helvetica, sans-serif;
  font-size: 34px;
  line-height: 1.39;
  letter-spacing: 0.015625rem;
  color: inherit;
}

h5 {
  font-family: "Roboto", Helvetica, sans-serif;
  font-size: 24px;
  letter-spacing: 1.67;
  color: inherit;
  font-weight: 300;
}

h6 {
  font-size: 18px;
  font-weight: bold;
  letter-spacing: 2px;
  color: inherit;
  text-transform: uppercase;
}

.type__caption {
  font-size: 12px;
  letter-spacing: 0.025rem;
}

.type__spacey { letter-spacing: 17.7px; }
.type__spacey_4 { letter-spacing: 4.4px; }
.type__spacey_6 { letter-spacing: 6.7px; }
.type__spacey_9 { letter-spacing: 9px; }

.type__uppercase {
  text-transform: uppercase;
}

.type__color_white {
  color: white;
}

.type__center {
  text-align: center;
}

.type__underline {
  text-decoration: underline;
}

.type__bold { font-weight: bold; }
.type__lighter { font-weight: lighter; }
.type__weight_300 { font-weight: 300; }
.type__weight_500 { font-weight: 500; }
.type__weight_600 { font-weight: 600; }

.type__no_margin {
  margin: 0;
}

.type__fade {
  opacity: 0.5;
}

@media (min-width: 900px) {
  h1 {
    font-size: 72px;
  }

  h2 {
    font-size: 64px;
  }
}


/* 
  4.  Navigation
  ===================
*/

body > nav {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  background-color: #898787;
  color: white;
  text-align: center;
  z-index: 98;
  min-height: 51px;
}

body > nav .nav__inner {
  position: relative;
  width: 100%;
  min-height: 51px;
}

.body__home > nav {
  top: initial;
  bottom: 0;
}


body > nav .nav__list {
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  background-color: #898787;
  -webkit-transition: opacity 200ms linear 200ms;
  transition: opacity 200ms linear 200ms;
  font-size: 14px;
}

body > nav .nav__list[data-state="closed"] {
  max-height: 0;
  opacity: 0;
  overflow: hidden;
}

body > nav .nav__list[data-state="open"] {
  height: calc(100vh - 51px);
  top: 51px;
  opacity: 1;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-flow: column nowrap;
          flex-flow: column nowrap;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}

body.body__home > nav .nav__list[data-state="open"] {
  top: 0;
}

body > nav .nav__list a {
  text-transform: uppercase;
  display: block;
  padding: 1em 0.85em;
  letter-spacing: 2.3;
}

body > nav .nav__list[data-state="open"] > a {
  width: 100%;
  padding: 2em 1em;
  font-weight: 600;
  -webkit-box-sizing: border-box;
          box-sizing: border-box; 
}

body > nav .nav__toggle {
  width: 36px;
  height: 36px;
  display: block;
  cursor: pointer;
  position: absolute;
  right: 36px;
}

body > nav .nav__toggle > span {
  width: 100%;
  display: block;
  height: 3px;
  border-radius: 3px;
  background-color: white;
  margin: 23px auto;
  position: relative;
  -webkit-transition: height linear 100ms;
  transition: height linear 100ms;
}

body > nav .nav__toggle > span::before,
body > nav .nav__toggle > span::after {
  content: "";
  width: 100%;
  display: block;
  height: 3px;
  border-radius: 3px;
  background-color: white;
  position: absolute;
  left: 0;
  -webkit-transition: -webkit-transform linear 200ms;
  transition: -webkit-transform linear 200ms;
  transition: transform linear 200ms;
  transition: transform linear 200ms, -webkit-transform linear 200ms;
}

body > nav .nav__toggle > span::before { top: -11px; }
body > nav .nav__toggle > span::after { top: 11px; }

body > nav .nav__list[data-state="open"] + .nav__toggle > span {
  height: 0;
}

body > nav .nav__list[data-state="open"] + .nav__toggle > span::before,
body > nav .nav__list[data-state="open"] + .nav__toggle > span::after {
  top: 0;
  left: 0;
}

body > nav .nav__list[data-state="open"] + .nav__toggle > span::before {
  -webkit-transform: rotate(45deg);
          transform: rotate(45deg);
}

body > nav .nav__list[data-state="open"] + .nav__toggle > span::after {
  -webkit-transform: rotate(-45deg);
          transform: rotate(-45deg);
}

@media (min-width: 992px) {
  body > nav {
    position: absolute;
  }

  body>nav .nav__list {
    position: relative;
    left: 0;
    top: 0;
    width: 100%;
  }

  body > nav .nav__list[data-state="closed"] {
    max-height: 58px;
    opacity: 1;
  }

  body > nav .nav__list a {
    text-transform: uppercase;
    display: inline-block;
    padding: 1em 0.85em;
    letter-spacing: 2.3;
  }

  body > nav .nav__toggle {
    display: none;
  }
}
/* ... */

